<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_signUp"
            android:text="@string/profile_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/text_nameOfUser"
            android:text="@string/text_nameOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/write_nameOfUser"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/write_nameOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/write_email"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_email"
            android:text="@string/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/write_email"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/write_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/email_hint"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/text_phoneOfUser"
            android:text="@string/text_phoneOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/write_phone"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/write_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="123-123123"
            android:textAlignment="center"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_address"
            android:text="@string/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/write_address"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/write_address"
            android:hint="@string/address_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_password"
            android:text="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/signUp_btn"
            android:text="@string/signUp_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>