<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hungry.travelersapp.hungry_travellers_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="hungry.travelersapp.hungry_travellers_app.ui.reserve.ReserveFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reserve" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="hungry.travelersapp.hungry_travellers_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
