<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    >

    <TextView
        android:id="@+id/appName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_nameP1"
        android:textSize="34sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        android:layout_marginStart="120dp"

        />

    <TextView
        android:id="@+id/appName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_nameP2"
        android:textSize="34sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName1"
        android:gravity="start"
        android:layout_marginStart="200dp"
        />

    <TextView
        android:id="@+id/opening_hours1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/opening_hours1"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/contacts"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName2" />

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introducing"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/opening_hours1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/opening_hours1"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opening_hours1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/contacts"
        android:textAlignment="center"
        android:textSize="15sp"
        android:paddingTop="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>