<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_login"
            android:text="@string/profile_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/text_email"
            android:text="@string/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/login_email"
            />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            />

        <TextView
            android:id="@+id/text_password"
            android:text="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            />

        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/login_btn"
            android:text="@string/log_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>